tests/NormalTests/paczka2/big_fuzzy/71509956.err
Error in line 6: nqLfN1U S808 47,7
Error in line 15: TwiU S762 50,2
Error in line 18: Zc4M S762 64,3
Error in line 47: S762 A99 57,5
Error in line 41: 1XkXG A99 76,6
Error in line 63: nqLfN1U A99 29%,7
Error in line 64: Zc4M S857 93,7
Error in line 67: S762 A99 39,9
Error in line 79: nqLfN1U A99 21,4
Error in line 83: Zc4M A99 23,6
Error in line 74: 1XkXG S808 117,4
Error in line 95: S762 S808 94,3
Error in line 105: vSwOWp A99 53,5
Error in line 106: vSwOWp S762 36,2
Error in line 101: z2KcXLNg S857 16,9
Error in line 116: vSwOWp A99 5,5
Error in line 122: nqLfN1U S808 33,5
Error in line 127: TwiU A99 24,26
Error in line 121: vSwOWp S857 27,5
Error in line 125: z2KcXLNg A99 51,1
Error in line 129: nqLfN1U S857 6,3
Error in line 120: S762 A99 82,9
Error in line 141: vSwOWp A99 88,1
Error in line 146: Zc4M S808 1,9
Error in line 149: 1XkXG A99 32,3
Error in line 150: 1XkXG S857 76,7
Error in line 144: nqLfN1U S762 43,9
Error in line 156: z2KcXLNg A99 83,8
Error in line 163: Zc4M S762 67,2
Error in line 166: Zc4M A99 58,2
Error in line 168: Zc4M S857 38,1
Error in line 175: z2KcXLNg A99 59,66
Error in line 173: z2KcXLNg A99 9,3
Error in line 133: TwiU A99 11,8
Error in line 181: z2KcXLNg S857 34,4
Error in line 191: S762 S857 -1,0
Error in line 180: Zc4M A99 83,1
Error in line 203: z2KcXLNg S762 21,6
Error in line 196: S762 S857 33,4
Error in line 214: nqLfN1U A99 88,0
Error in line 222: vSwOWp S857 -1,4
Error in line 210: z2KcXLNg S857 5,7
Error in line 212: vSwOWp S857 58,3
Error in line 239: z2KcXLNg A99 29,0
Error in line 244: S762 S762 30,0
